--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -234,5 +234,10 @@ h1 {
   border-radius: 0; 
   transition: border-bottom 10s;
 }
+ .dropdown-row {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 24px;
+}
 
 }
